force-app/main/default/objects/Lead/fields/AE_Modular_Lead__c.field-meta.xml
<CustomField>
    <fullName>AE_Modular_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this lead is associated with the Modular Business Unit.</description>
    <label>AE Modular Lead</label>
    <type>Checkbox</type>
</CustomField>