force-app/main/default/objects/Lead/fields/Affinity_Script__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Script__c</fullName>
    <label>Affinity Script</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>