force-app/main/default/objects/Lead/fields/Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact__c</fullName>
    <description>Agency Contact</description>
    <label>Agency Contact</label>
    <type>TextArea</type>
</CustomField>