force-app/main/default/objects/Lead/fields/Attribution__c.field-meta.xml
<CustomField>
    <fullName>Attribution__c</fullName>
    <label>Where Heard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>