force-app/main/default/objects/Lead/fields/Commission_or_Discount__c.field-meta.xml
<CustomField>
    <fullName>Commission_or_Discount__c</fullName>
    <label>Commission or Discount?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commision</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>