force-app/main/default/objects/Lead/fields/Current_Insurance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Current_Insurance_Partner__c</fullName>
    <label>Current Insurance Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>