force-app/main/default/objects/Lead/fields/Current_Partnership_Strengths_Weakness__c.field-meta.xml
<CustomField>
    <fullName>Current_Partnership_Strengths_Weakness__c</fullName>
    <label>Current Partnership Strengths / Weakness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>