force-app/main/default/objects/Lead/fields/Customer_Sector__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sector__c</fullName>
    <label>Customer Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>