force-app/main/default/objects/Lead/fields/Do_all_members_fit_on_our_scheme__c.field-meta.xml
<CustomField>
    <fullName>Do_all_members_fit_on_our_scheme__c</fullName>
    <label>Do all members fit on our scheme?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>