force-app/main/default/objects/Lead/fields/End_Client__c.field-meta.xml
<CustomField>
    <fullName>End_Client__c</fullName>
    <description>End Client Name</description>
    <label>End Client</label>
    <type>TextArea</type>
</CustomField>