force-app/main/default/objects/Lead/fields/End_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_Client_Contact__c</fullName>
    <description>Stores end clients contact</description>
    <label>End Client Contact</label>
    <type>TextArea</type>
</CustomField>