force-app/main/default/objects/Lead/fields/End_Client_Email__c.field-meta.xml
<CustomField>
    <fullName>End_Client_Email__c</fullName>
    <description>Storing end clients email address</description>
    <label>End Client Email</label>
    <type>Email</type>
</CustomField>