force-app/main/default/objects/Lead/fields/Existing_Customer_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Engagement__c</fullName>
    <label>Existing Customer Engagement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>