force-app/main/default/objects/Lead/fields/Existing_Lead_T_S__c.field-meta.xml
<CustomField>
    <fullName>Existing_Lead_T_S__c</fullName>
    <label>Existing Lead T/S</label>
    <type>DateTime</type>
</CustomField>