force-app/main/default/objects/Lead/fields/gaconnector_GCLID__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_GCLID__c</fullName>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>