force-app/main/default/objects/Lead/fields/How_do_they_want_to_refer__c.field-meta.xml
<CustomField>
    <fullName>How_do_they_want_to_refer__c</fullName>
    <label>How do they want to refer?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>