force-app/main/default/objects/Lead/fields/How_Kingsbridge_fit_into_the_process__c.field-meta.xml
<CustomField>
    <fullName>How_Kingsbridge_fit_into_the_process__c</fullName>
    <label>How Kingsbridge fit into the process?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>