force-app/main/default/objects/Lead/fields/If_No_Opportunity_Why__c.field-meta.xml
<CustomField>
    <fullName>If_No_Opportunity_Why__c</fullName>
    <label>If No Opportunity, Why?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>