force-app/main/default/objects/Lead/fields/In_Person_or_Online_Meeting__c.field-meta.xml
<CustomField>
    <fullName>In_Person_or_Online_Meeting__c</fullName>
    <label>In Person or Online Meeting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In person meeting</fullName>
            </value>
            <value>
                <fullName>Online meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>