force-app/main/default/objects/Lead/fields/INSTANDA_URL__c.field-meta.xml
<CustomField>
    <fullName>INSTANDA_URL__c</fullName>
    <description>URL to link record to INSTANDA Quote record</description>
    <label>INSTANDA URL</label>
    <type>Url</type>
</CustomField>