force-app/main/default/objects/Lead/fields/Insurance_Mandate__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Mandate__c</fullName>
    <label>Insurance Mandate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Mandated</fullName>
            </value>
            <value>
                <fullName>Insurance not Mandated</fullName>
            </value>
            <value>
                <fullName>Open to insurance Mandate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>