force-app/main/default/objects/Lead/fields/Integrated_Q_B_Journey_Requested__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Q_B_Journey_Requested__c</fullName>
    <label>Integrated Q&amp;B Journey Requested?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>