force-app/main/default/objects/Lead/fields/Kingsbridge_Proposal_Details__c.field-meta.xml
<CustomField>
    <fullName>Kingsbridge_Proposal_Details__c</fullName>
    <label>Kingsbridge Proposal Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>