force-app/main/default/objects/Lead/fields/Latest_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Latest_Attribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribution</label>
    <referenceTo>Attribution__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>