force-app/main/default/objects/Lead/fields/Lead_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Id (18)</label>
    <type>Text</type>
</CustomField>