force-app/main/default/objects/Lead/fields/Lead_to_be_deleted_by_automation__c.field-meta.xml
<CustomField>
    <fullName>Lead_to_be_deleted_by_automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field will be used by automation to indicate that this is a duplicate Lead, which will be deleted shortly.</description>
    <label>Lead to be deleted by automation</label>
    <type>Checkbox</type>
</CustomField>