force-app/main/default/objects/Lead/fields/Main_Lead_Record__c.field-meta.xml
<CustomField>
    <fullName>Main_Lead_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to determine that this is the Main Lead record, for any future Leads only an Attribution record will be created</description>
    <label>Main Lead Record</label>
    <type>Checkbox</type>
</CustomField>