force-app/main/default/objects/Lead/fields/Marked_for_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Marked_for_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to be used to any Leads that meet the quarantine criteria and will be used to identify Lead records that should be deleted manually.</description>
    <label>Marked for Deletion</label>
    <type>Checkbox</type>
</CustomField>