force-app/main/default/objects/Lead/fields/Marketing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent__c</fullName>
    <description>The new field to indicate the customer&apos;s answer to the GDPR compliant marketing consent questions.</description>
    <label>Marketing Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Consent</valueSetName>
    </valueSet>
</CustomField>