force-app/main/default/objects/Lead/fields/Multiple_Sources__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Sources__c</fullName>
    <formula>IF( Number_of_Attribution__c &gt; 1 , &quot;✅&quot;, &quot;❌&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiple Sources</label>
    <type>Text</type>
</CustomField>