force-app/main/default/objects/Lead/fields/No_Monthly_Sign_Ups__c.field-meta.xml
<CustomField>
    <fullName>No_Monthly_Sign_Ups__c</fullName>
    <label>No. Monthly Sign-Ups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>