force-app/main/default/objects/Lead/fields/No_of_current_members__c.field-meta.xml
<CustomField>
    <fullName>No_of_current_members__c</fullName>
    <label>No. of current members</label>
    <length>255</length>
    <type>Text</type>
</CustomField>