force-app/main/default/objects/Lead/fields/Number_of_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Cases__c</fullName>
    <label>Number of Open Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>