force-app/main/default/objects/Lead/fields/Opportunity_created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_created_from_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunity created from Lead</label>
    <type>Checkbox</type>
</CustomField>