force-app/main/default/objects/Lead/fields/Other_Partner__c.field-meta.xml
<CustomField>
    <fullName>Other_Partner__c</fullName>
    <label>Other Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>