force-app/main/default/objects/Lead/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <formula>IF((TEXT(Status) == &apos;New&apos;) &amp;&amp; (CreatedDate+0.04167 &lt; Now()), TRUE, FALSE)</formula>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>