force-app/main/default/objects/Lead/fields/Partner_Channel_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Partner_Channel_Marketing__c</fullName>
    <label>Partner Channel Marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>