force-app/main/default/objects/Lead/fields/Partner_External_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_External_Name__c</fullName>
    <formula>Partner__r.External_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner External Name</label>
    <type>Text</type>
</CustomField>