force-app/main/default/objects/Lead/fields/Partner_Fixed_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Fixed_Discount__c</fullName>
    <formula>Partner__r.Fixed_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Fixed Discount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>