force-app/main/default/objects/Lead/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <description>Reference to the Partner through which the Enquiry prospect was sourced</description>
    <label>Partner ID</label>
    <type>TextArea</type>
</CustomField>