force-app/main/default/objects/Lead/fields/Partner_Key_Points__c.field-meta.xml
<CustomField>
    <fullName>Partner_Key_Points__c</fullName>
    <formula>Partner__r.Key_Points__c</formula>
    <label>Partner Key Points</label>
    <type>Text</type>
</CustomField>