force-app/main/default/objects/Lead/fields/Partner_Minimum_Cover_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Partner_Minimum_Cover_Requirements__c</fullName>
    <formula>Partner__r.Minimum_Cover_Requirements__c</formula>
    <label>Partner Minimum Cover Requirements</label>
    <type>Text</type>
</CustomField>