force-app/main/default/objects/Lead/fields/Partner_Percentage_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Percentage_Discount__c</fullName>
    <formula>Partner__r.Percentage_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Percentage Discount</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>