force-app/main/default/objects/Lead/fields/Primary_Contact_for_meeting__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_for_meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact for meeting</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Primary Contact for meeting)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>