force-app/main/default/objects/Lead/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>States which product customer is interested in</description>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_type</valueSetName>
    </valueSet>
</CustomField>