force-app/main/default/objects/Lead/fields/Reactivate_Lead__c.field-meta.xml
<CustomField>
    <fullName>Reactivate_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used in Lead automation for Reactivating Dormant Leads that have been unqualified form more than 30 days (Lead: Create flow)</description>
    <label>Reactivate Lead</label>
    <type>Checkbox</type>
</CustomField>