force-app/main/default/objects/Lead/fields/Reason_Products_Unsuitable__c.field-meta.xml
<CustomField>
    <fullName>Reason_Products_Unsuitable__c</fullName>
    <description>Reason products are unsuitable</description>
    <label>Reason Products Unsuitable</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Lost__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Reason_Products_Unsuitable</valueSetName>
    </valueSet>
</CustomField>