force-app/main/default/objects/Lead/fields/Reengagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Reengagement_Date__c</fullName>
    <label>Reengagement Date</label>
    <type>Date</type>
</CustomField>