force-app/main/default/objects/Lead/fields/Reengagement_Date_is_Today__c.field-meta.xml
<CustomField>
    <fullName>Reengagement_Date_is_Today__c</fullName>
    <formula>Reengagement_Date__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reengagement Date is Today?</label>
    <type>Checkbox</type>
</CustomField>