force-app/main/default/objects/Lead/fields/Referral_Friend_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Friend_Name__c</fullName>
    <label>Referral Friend Name</label>
    <type>TextArea</type>
</CustomField>