force-app/main/default/objects/Lead/fields/Referred_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Email__c</fullName>
    <label>Referred By Email</label>
    <type>Email</type>
</CustomField>