force-app/main/default/objects/Lead/fields/Referred_By_Email_Account__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Email_Account__c</fullName>
    <formula>Referred_By_Account__r.Account_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred By Email (Account)</label>
    <type>Text</type>
</CustomField>