force-app/main/default/objects/Lead/fields/Referred_By_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred By (Lead)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>