force-app/main/default/objects/Lead/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Date that the customer is due to renew their policy, mandatory for leads lost that are insured elsewhere</description>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>