force-app/main/default/objects/Lead/fields/RF_Code__c.field-meta.xml
<CustomField>
    <fullName>RF_Code__c</fullName>
    <label>RF Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>