force-app/main/default/objects/Lead/fields/RF_Converted_Count__c.field-meta.xml
<CustomField>
    <fullName>RF_Converted_Count__c</fullName>
    <label>RF Converted Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>