force-app/main/default/objects/Lead/fields/RF_Link__c.field-meta.xml
<CustomField>
    <fullName>RF_Link__c</fullName>
    <label>RF_Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>