force-app/main/default/objects/Lead/fields/SBJ_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>SBJ_Quote_ID__c</fullName>
    <label>SBJ Quote ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>