force-app/main/default/objects/Lead/fields/Send_Lead_to_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Send_Lead_to_Pardot__c</fullName>
    <label>Send Lead to Pardot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>