force-app/main/default/objects/Lead/fields/Sub_Reason_Lost_1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reason_Lost_1__c</fullName>
    <label>Sub-Reason Lost 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_Lost__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too Much Cover</fullName>
            </value>
            <value>
                <fullName>Not Enough Cover</fullName>
            </value>
            <value>
                <fullName>Turnover</fullName>
            </value>
            <value>
                <fullName>Occupation Not Covered</fullName>
            </value>
            <value>
                <fullName>Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Insured With Competitor</fullName>
            </value>
            <value>
                <fullName>Unqualified Lead</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Chase Exhausted</fullName>
            </value>
            <value>
                <fullName>IR35</fullName>
            </value>
            <value>
                <fullName>No work</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Only needed PI</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t want EL</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t want to be contacted</fullName>
            </value>
            <value>
                <fullName>Higher PI/PL</fullName>
            </value>
            <value>
                <fullName>Higher Turnover</fullName>
            </value>
            <value>
                <fullName>Malpractice Exclusion</fullName>
            </value>
            <value>
                <fullName>Manual Work</fullName>
            </value>
            <value>
                <fullName>More Than 5 Employees</fullName>
            </value>
            <value>
                <fullName>Non-UK Resident</fullName>
            </value>
            <value>
                <fullName>Recruitment Consultant</fullName>
            </value>
            <value>
                <fullName>USA Involvement</fullName>
            </value>
            <value>
                <fullName>Changed business activity</fullName>
            </value>
            <value>
                <fullName>Company Closed</fullName>
            </value>
            <value>
                <fullName>Company Dormant</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Inside IR35</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>