force-app/main/default/objects/Lead/fields/Sub_Reason_Lost_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reason_Lost_2__c</fullName>
    <label>Sub-Reason Lost 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Reason_Lost_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>EL</fullName>
            </value>
            <value>
                <fullName>500k - 750k</fullName>
            </value>
            <value>
                <fullName>750k - 1m</fullName>
            </value>
            <value>
                <fullName>1m -2m</fullName>
            </value>
            <value>
                <fullName>2m - 5m</fullName>
            </value>
            <value>
                <fullName>5m+</fullName>
            </value>
            <value>
                <fullName>Hiscox</fullName>
            </value>
            <value>
                <fullName>Simply Business (Chiswell, Finsbury)</fullName>
            </value>
            <value>
                <fullName>Markel</fullName>
            </value>
            <value>
                <fullName>Policy Bee</fullName>
            </value>
            <value>
                <fullName>Superscript</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PPC - Wasn&apos;t expecting a call</fullName>
            </value>
            <value>
                <fullName>Partnership - Wasn&apos;t expecting a call</fullName>
            </value>
            <value>
                <fullName>Incorrect Details</fullName>
            </value>
            <value>
                <fullName>Wants standalone PI</fullName>
            </value>
            <value>
                <fullName>Wants standalone PL</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t want EL</fullName>
            </value>
            <value>
                <fullName>Like for like cover</fullName>
            </value>
            <value>
                <fullName>Pre-quote</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>