force-app/main/default/objects/Lead/fields/Sub_Reason_Lost_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reason_Lost_Free_Text__c</fullName>
    <label>Sub-Reason Lost Free Text</label>
    <type>TextArea</type>
</CustomField>