force-app/main/default/objects/Lead/fields/Ultimate_Decisionmaker__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Decisionmaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Decisionmaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Ultimate Decisionmaker)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>