force-app/main/default/objects/Lead/fields/Unqualified_Date_is_within_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Date_is_within_30_Days__c</fullName>
    <formula>TODAY() - Unqualified_Date__c &lt;= 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unqualified Date is within 30 Days</label>
    <type>Checkbox</type>
</CustomField>