force-app/main/default/objects/Lead/fields/Win__c.field-meta.xml
<CustomField>
    <fullName>Win__c</fullName>
    <label>Win-Back Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>