force-app/main/default/objects/Lead/fields/Working_Date__c.field-meta.xml
<CustomField>
    <fullName>Working_Date__c</fullName>
    <description>Date Lead moved into Working status</description>
    <label>Working Date</label>
    <type>Date</type>
</CustomField>