force-app/main/default/objects/Lead/recordTypes/Contractor_Lead.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Lead</fullName>
    <active>false</active>
    <businessProcess>Contractor Lead</businessProcess>
    <description>For individuals interested in Contractor related insurance products.</description>
    <label>Contractor Lead</label>
</RecordType>