force-app/main/default/objects/Lead/recordTypes/Customer_Lead.recordType-meta.xml
<RecordType>
    <fullName>Customer_Lead</fullName>
    <active>true</active>
    <businessProcess>Contractor Lead</businessProcess>
    <description>For Customer Leads interested in any related insurance products.</description>
    <label>Customer Lead</label>
</RecordType>