force-app/main/default/objects/Lead/recordTypes/Partner_Lead.recordType-meta.xml
<RecordType>
    <fullName>Partner_Lead</fullName>
    <active>true</active>
    <businessProcess>Partner Lead</businessProcess>
    <description>For any Partner Leads.</description>
    <label>Partner Lead</label>
</RecordType>