force-app/main/default/objects/Lead/validationRules/LV18_SubReasonLostRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>LV18_SubReasonLostRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Kingsbridge_General_Custom_Setting__c.Validation_Rule__c = False,
$User.Alias &lt;&gt; &apos;IntUser&apos;,
$User.Alias &lt;&gt; &apos;guest&apos;,
ISBLANK(Sub_Reason_Lost_Free_Text__c ),
OR(
ISPICKVAL(Sub_Reason_Lost_1__c,&quot;Occupation Not Covered&quot;),
ISPICKVAL(Sub_Reason_Lost_1__c,&quot;Jurisdiction&quot;),
ISPICKVAL(Sub_Reason_Lost_2__c,&quot;Other&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>Sub_Reason_Lost_Free_Text__c</errorDisplayField>
    <errorMessage>A Sub-Reason Lost Free Text is required.</errorMessage>
</ValidationRule>