force-app/main/default/objects/Lead/validationRules/LV1_LossReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>LV1_LossReasonRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $Setup.Kingsbridge_General_Custom_Setting__c.Validation_Rule__c = False,
$User.Alias &lt;&gt; &apos;IntUser&apos;,
$User.Alias &lt;&gt; &apos;guest&apos;,
 ISCHANGED(Status),
 ISPICKVAL(Status,&quot;Unqualified&quot;),
 ISBLANK(TEXT(Reason_Lost__c))
)</errorConditionFormula>
    <errorDisplayField>Reason_Lost__c</errorDisplayField>
    <errorMessage>LV1: A Reason Lost is Required</errorMessage>
</ValidationRule>