force-app/main/default/objects/Lead/validationRules/LV2_ReasonProductsUnsuitableRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>LV2_ReasonProductsUnsuitableRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Kingsbridge_General_Custom_Setting__c.Validation_Rule__c = False,
$User.Alias &lt;&gt; &apos;IntUser&apos;,
$User.Alias &lt;&gt; &apos;guest&apos;,
ISCHANGED(Status),
ISPICKVAL(Status,&quot;Unqualified&quot;),
OR(
ISPICKVAL (Reason_Lost__c, &apos;Product unsuitable&apos;),
ISPICKVAL (Reason_Lost__c, &apos;Product unsuitable:ROI&apos;)),
ISBLANK( TEXT(Reason_Products_Unsuitable__c ))
)</errorConditionFormula>
    <errorDisplayField>Reason_Products_Unsuitable__c</errorDisplayField>
    <errorMessage>LV2: A Reason Products Unsuitable is Required</errorMessage>
</ValidationRule>